tf/network.tf
resource "aws_subnet" "my_subnet" {
  vpc_id                  = var.vpc_id
  cidr_block              = var.subnet_cidr_block
  map_public_ip_on_launch = true
  // ... otras configuraciones ...
}
